Readapted FindPokemonById API
